BAZEL-3429 [bazel]: windows-like path parsing
GitOrigin-RevId: 068dc159b90fa9a77725985d90a8562c55a61e8d